<resources>
    <string name="app_name">hotelBolt</string>
    <string name="token_init" translatable="false">TOKEN_INIT</string>
    <string name="token_expired" translatable="false">TOKEN_EXPIRED</string>
    <string name="home_tabBar">Home</string>
    <string name="book_tabBar">Book</string>
    <string name="history_tabBar">Order</string>
    <string name="profile_tabBar">Mine</string>
    <string name="queryHint_home_searchView">Told us where to go</string>
    <string name="title_home_discover">To Discover New Places</string>
    <string name="title_home_discount">Promotions and offers</string>
    <string name="title_home_vip">Member Center</string>
    <string name="title_profile">My Account</string>
    <string name="bookpage_tab_book">Search</string>
    <string name="bookpage_tab_reorder">Reorder</string>
    <string name="bookpage_tab_fav">Favourite</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_button_wechat">Sign in with WeChat</string>
    <string name="login_button_account">Sign in with your Account</string>
    <string name="login_hint_register">Click here to register</string>
    <string name="login_hint_learnMore">Learn More…</string>
    <string name="login_service_explain">Please be aware that clicking on the login or registration button means that you have agreed to our Terms of Service.</string>
    <string name="button_click_login">Click to login</string>
    <string name="button_click_register">Click to sign up</string>
    <string name="button_login_noAccount">Don\'t have an account yet?</string>
    <string name="text_account">Account</string>
    <string name="text_password">Password</string>
    <string name="text_forget">Forgot your password?</string>
    <string name="text_login">Sign in</string>
    <string name="text_register">Sign up</string>
    <string name="text_confirmPassword">Confirm</string>
    <string name="text_checkIn">Check In</string>
    <string name="text_checkOut">Check Out</string>
    <string name="page_preview">face attributes detect(video)</string>
    <string name="page_ir_preview">ir liveness detect(video)</string>
    <string name="page_face_recognize">face compare 1:n(video vs database,rgb liveness detect)</string>
    <string name="page_ir_face_recognize">face compare 1:n(video vs database,ir liveness detect)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="page_face_manage">face manage</string>
    <string name="get_device_finger_failed">get device finger failed, code is: %d</string>
    <string name="choose_detect_degree">choose video-mode detect degree</string>
    <string name="copy_device_fingerprint">copy device fingerprint</string>
    <string name="device_fingerprint_copied">device fingerprint：：\n%s\n copied</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="library_not_found">library not found, please check if you put .so files into the project directory app\\src\\main\\jniLibs</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="processing">processing</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="register">register</string>
    <string name="switch_camera">switch camera</string>
    <string name="switch_camera_failed">switch camera failed</string>
    <string name="notice_change_detect_degree">camera switched, if no face detected, please change face detect degree in homepage</string>
    <string name="recognize_failed_notice">DENIED:%s</string>
    <string name="recognize_success_notice">PASS:%s</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>
    <string name="progress_dialog_batch_register">progress: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">registering,please wait</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="batch_process_notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="batch_process_no_face_need_to_delete">no face need to delete</string>
    <string name="batch_process_confirm_delete">delete those %d images and face features?</string>
    <string name="batch_process_batch_register">batch register</string>
    <string name="batch_process_notification">notification</string>
    <string name="batch_process_clear_faces">clear faces</string>
    <string name="batch_process_path_is_not_exists">path \n%s\n is not exists</string>
    <string name="batch_process_path_is_not_dir">path \n%s\n is not a directory</string>
    <string name="batch_process_processing_please_wait">process start,please wait</string>
    <string name="batch_process_finished_info">process finished!\ntotal count =  %d \nsuccess count = %d \nfailed count = %d \nfailed images are in directory \' %s \'</string>
    <string name="text_room">Rooms</string>
    <string name="text_guest">Guests</string>
    <string name="text_child">Children</string>
    <string name="default_zero_num" translatable="false">0</string>
    <string name="default_now_date">Mar. 2th</string>
    <string name="text_yearWithMonth">%d.%d</string>
    <string name="text_specialDiscount">Preferential Room</string>
    <string name="text_usingIntegral">Use Integral Consumption</string>
    <string name="text_more_choice">More Options</string>
    <string name="text_searchHotel">Search Hotel</string>
    <string name="text_enter">Enter</string>
    <string name="text_hintForInputAccount">Account Number.</string>
    <string name="text_areadyHaveAccount">Already have an account?</string>
    <string name="text_hint_correctAccountAndPw">Please check your password and account.</string>
    <string name="text_repeatPassword">Repeat Password</string>
    <string name="text_nickName">Nickname</string>
    <string name="text_loading">Loading…</string>
    <string name="text_wrongPassword">Incorrect username or password, please try again.</string>
    <string name="text_loginSuccess">Login Success</string>
    <string name="text_networkError">Network connection error</string>
    <string name="text_regSuccess">Successful Registration</string>
    <string name="text_regFail">Registration Failed</string>
    <string name="text_avatar">Avatar</string>
    <string name="tip_completeIdentity">Complete your Identity information</string>
    <string name="text_username">Username</string>
    <string name="text_realName">Real Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_id">ID</string>
    <string name="text_motto">Motto</string>
    <string name="text_phone">Phone</string>
    <string name="text_wechat">Wechat</string>
    <string name="text_contact">Contact information</string>
    <string name="text_email">Email</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_menu">Menu</string>
    <string name="text_msg">Message</string>
    <string name="text_arrowDown">down arrow</string>
    <string name="text_quickShortcut">Quick Access</string>
    <string name="text_defaultLocation">Hangzhou</string>
    <string name="text_hotels">Hotels</string>
    <string name="text_add_to_fav">Add to Favourites</string>
    <string name="text_select">Selections</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_my_tool">My Toolbox</string>
    <string name="title_checkMoreTools">Learn More</string>
    <string name="title_travelGrowth">My Experience</string>
    <string name="text_myFav">My Favourite</string>
    <string name="text_browserHistory">Browse History</string>
    <string name="text_journeyList">Journey List</string>
    <string name="text_vouchers">Vouchers</string>
    <string name="text_default_profile_num" translatable="false">0</string>
    <string name="text_default_profile_identity" translatable="false">Member</string>
    <string name="text_personalInfo">Personal Info</string>
    <string name="text_qrcode">QR Code</string>
    <string name="text_faceIdentify">Face Identify</string>
    <string name="text_ARTourGuide">AR TourGuide</string>
    <string name="text_memberPrivCode">Member Privilege</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_journeyMenu">Journey Menu</string>
    <string name="text_arExperimental">AR Lab</string>
    <string name="text_allOrders">All Orders</string>
    <string name="text_pending">Pending</string>
    <string name="text_tourPlan">Tour Plan</string>
    <string name="text_toBeCommented">To Comment</string>
    <string name="text_pics">Picture</string>
    <string name="text_order">Orders</string>
    <string name="text_payingOrders">Paying</string>
    <string name="text_paidOrders">Paid</string>
    <string name="text_pendingOrders">Pending</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_orderTitle">orderTitle</string>
    <string name="text_orderNo">orderNo</string>
    <string name="text_orderValue">Order Value</string>
    <string name="text_order_sum">Total %i </string>
    <string name="text_order_detail">Order Detail</string>
    <string name="text_order_price">Order Price</string>
    <string name="text_hintForModifyUsername">Please enter the username you want to modify</string>
    <string name="text_modifyUsername">Modify Username</string>
    <string name="text_hintForOffendingUsername">There can be no offending words in the username</string>
    <string name="text_comment">Comment</string>
</resources>