<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/default_BookPage_backgroundColor"
        android:textDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/book_tabBar"
        app:titleTextColor="@color/qmui_config_color_pure_black" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/book_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/default_BookPage_backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:tabTextColor="@color/qmui_config_color_pure_black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/bookpage_tab_book" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookpage_tab_reorder" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookpage_tab_fav" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/bookpage_viewpager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_tab_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>
