<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="10dp">

    <com.qmuiteam.qmui.layout.QMUIConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/orderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/text_orderNo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088" />

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderNo"
            app:layout_constraintVertical_bias="0.23"
            app:qmui_corner_radius="10dp"
            app:srcCompat="@drawable/ic_discount" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_status"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/orderNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toEndOf="@+id/orderNo"
            app:layout_constraintTop_toTopOf="@+id/orderNo" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:contentDescription="@string/text_pics"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/orderNo"
            app:layout_constraintEnd_toStartOf="@+id/orderNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orderNo"
            app:srcCompat="@drawable/ic_radio_button_unchecked_gray_24dp" />

        <TextView
            android:id="@+id/orderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_orderTitle"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/orderDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_detail"
            android:textColor="?attr/qmui_config_color_gray_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/orderTitle"
            app:layout_constraintTop_toBottomOf="@+id/orderTitle"
            app:layout_constraintVertical_bias="0.110000014" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_orderValue"
            app:layout_constraintBottom_toBottomOf="@+id/orderDetail"
            app:layout_constraintEnd_toEndOf="@+id/textView32"
            app:layout_constraintTop_toTopOf="@+id/orderDetail" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_sum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/orderDetail"
            app:layout_constraintVertical_bias="0.32999998" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/QMUIRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/text_order_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            app:layout_constraintVertical_bias="0.84000003" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_pics"
            app:layout_constraintBottom_toBottomOf="@+id/orderNo"
            app:layout_constraintEnd_toStartOf="@+id/textView32"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/orderNo"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_price"
            app:layout_constraintBottom_toBottomOf="@+id/textView36"
            app:layout_constraintEnd_toEndOf="@+id/textView35"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="@+id/textView36" />


    </com.qmuiteam.qmui.layout.QMUIConstraintLayout>

</androidx.cardview.widget.CardView>