<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextureView
                android:id="@+id/single_camera_texture_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true" />

<!--            <xyz.tspace.hotelapp.util.arcface.widget.FaceRectView-->
<!--                android:id="@+id/single_camera_face_rect_view"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->
        </FrameLayout>

        <Switch
            android:id="@+id/single_camera_switch_liveness_detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:text="@string/liveness_detect" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <Button
                android:id="@+id/switchCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_camera" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_camera_recycler_view_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>
</layout>