<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_BookPage_backgroundColor"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/text_hintForModifyUsername"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_set_info"
        app:navigationIcon="@drawable/ic_arrow_back_blue_24dp"
        app:title="@string/text_modifyUsername" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/thinkb"
        android:text="@string/text_hintForOffendingUsername"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>