<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_BookPage_backgroundColor"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/text_pics"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chevron_left_blue_24dp" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="120dp"
            android:id="@+id/tabLayout"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tabIndicatorColor="@color/app_color_theme_10"
            app:tabTextAppearance="@style/tab_title_style">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_comment" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pics" />
        </com.google.android.material.tabs.TabLayout>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/submitComment_btn"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/baohei"
            android:text="@string/ok"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="15sp"
            app:qmui_backgroundColor="@color/qmui_config_color_blue"
            app:qmui_radius="5dp" />
    </FrameLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>